// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders a categorical line chart 1`] = `
{
  "boost": {
    "useGPUTranslations": true,
    "usePreAllocated": true,
  },
  "chart": {
    "alignTicks": false,
    "polar": false,
    "spacing": [
      20,
      20,
      20,
      20,
    ],
    "type": "line",
  },
  "credits": {
    "enabled": false,
  },
  "exporting": {
    "enabled": true,
  },
  "legend": {
    "align": "center",
    "backgroundColor": "transparent",
    "borderColor": "transparent",
    "borderWidth": "",
    "enabled": true,
    "itemStyle": {
      "color": "#5b6372",
      "cursor": "default",
      "fontFamily": "Open Sans",
      "fontSize": "13px",
      "fontWeight": "normal",
      "pointerEvents": "none",
      "textOutline": "none",
    },
    "layout": "horizontal",
    "symbolRadius": 0,
    "verticalAlign": "bottom",
  },
  "navigator": {
    "enabled": false,
  },
  "plotOptions": {
    "series": {
      "connectNulls": false,
      "dataLabels": {
        "crop": false,
        "enabled": false,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineWidth": 2,
      "marker": {
        "enabled": false,
        "fillColor": null,
        "fillOpacity": 0.3,
        "lineColor": null,
        "lineWidth": 2,
        "radius": 4,
        "states": {
          "hover": {
            "fillColor": "#FFFFFF",
            "lineWidth": 3,
            "radius": 6,
          },
        },
        "symbol": "circle",
      },
      "states": {
        "select": {
          "borderColor": "transparent",
          "color": null,
          "opacity": 0.3,
        },
      },
      "stickyTracking": false,
    },
  },
  "series": [
    {
      "boostThreshold": 0,
      "color": "#00cee6",
      "connectNulls": false,
      "custom": {
        "rawValue": [
          "France",
        ],
      },
      "data": [
        {
          "custom": {
            "rawValue": "200",
            "xValue": [
              "Pies",
            ],
          },
          "selected": false,
          "y": 200,
        },
        {
          "custom": {
            "rawValue": "400",
            "xValue": [
              "Wine",
            ],
          },
          "selected": false,
          "y": 400,
        },
        {
          "custom": {
            "rawValue": "600",
            "xValue": [
              "Pasta",
            ],
          },
          "selected": false,
          "y": 600,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "France",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 0,
    },
    {
      "boostThreshold": 0,
      "color": "#9b9bd7",
      "connectNulls": false,
      "custom": {
        "rawValue": [
          "USA",
        ],
      },
      "data": [
        {
          "custom": {
            "rawValue": "1000",
            "xValue": [
              "Pies",
            ],
          },
          "selected": false,
          "y": 1000,
        },
        {
          "custom": {
            "rawValue": "100",
            "xValue": [
              "Wine",
            ],
          },
          "selected": false,
          "y": 100,
        },
        {
          "custom": {
            "rawValue": "1200",
            "xValue": [
              "Pasta",
            ],
          },
          "selected": false,
          "y": 1200,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "USA",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 0,
    },
  ],
  "title": {
    "text": null,
  },
  "tooltip": {
    "animation": false,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#CCCCCC",
    "borderRadius": 10,
    "borderWidth": 1,
    "formatter": [Function],
    "useHTML": true,
  },
  "xAxis": [
    {
      "categories": [
        "Pies",
        "Wine",
        "Pasta",
      ],
      "endOnTick": false,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "overflow": "none",
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": null,
      "min": null,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "plotBands": [],
      "plotLines": [],
      "startOnTick": false,
      "tickColor": "#d1d1d7",
      "tickInterval": null,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "X Axis title",
      },
      "type": "linear",
    },
  ],
  "yAxis": [
    {
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 1200,
      "min": 100,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineDashStyle": "Dot",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "minorTickWidth": 0,
      "showLastLabel": true,
      "stackLabels": {
        "allowOverlap": false,
        "crop": true,
        "enabled": false,
        "labelrank": 99999,
        "rotation": 0,
        "style": {
          "color": "#56535b",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "bold",
          "pointerEvents": "none",
          "textOutline": "none",
          "textOverflow": "ellipsis",
        },
      },
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickInterval": null,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "Y Axis title",
      },
      "type": "linear",
    },
  ],
}
`;

exports[`renders a categorical line chart with two x axes 1`] = `
{
  "boost": {
    "useGPUTranslations": true,
    "usePreAllocated": true,
  },
  "chart": {
    "alignTicks": false,
    "polar": false,
    "spacing": [
      75,
      20,
      20,
      20,
    ],
    "type": "area",
  },
  "credits": {
    "enabled": false,
  },
  "exporting": {
    "enabled": true,
  },
  "legend": {
    "align": "center",
    "backgroundColor": "transparent",
    "borderColor": "transparent",
    "borderWidth": "",
    "enabled": true,
    "itemStyle": {
      "color": "#5b6372",
      "cursor": "default",
      "fontFamily": "Open Sans",
      "fontSize": "13px",
      "fontWeight": "normal",
      "pointerEvents": "none",
      "textOutline": "none",
    },
    "layout": "horizontal",
    "symbolRadius": 0,
    "verticalAlign": "bottom",
  },
  "navigator": {
    "enabled": false,
  },
  "plotOptions": {
    "area": {},
    "series": {
      "connectNulls": false,
      "dataLabels": {
        "crop": false,
        "enabled": false,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineWidth": 2,
      "marker": {
        "enabled": false,
        "fillColor": null,
        "fillOpacity": 0.3,
        "lineColor": null,
        "lineWidth": 2,
        "radius": 4,
        "states": {
          "hover": {
            "fillColor": "#FFFFFF",
            "lineWidth": 3,
            "radius": 6,
          },
        },
        "symbol": "circle",
      },
      "states": {
        "select": {
          "borderColor": "transparent",
          "color": null,
          "opacity": 0.3,
        },
      },
      "stickyTracking": false,
    },
  },
  "series": [
    {
      "boostThreshold": 0,
      "color": "#00cee6",
      "connectNulls": false,
      "data": [
        {
          "custom": {
            "rawValue": "1200",
            "xValue": [
              "Pasta",
              "USA",
            ],
          },
          "selected": false,
          "y": 1200,
        },
        {
          "custom": {
            "rawValue": "600",
            "xValue": [
              "Pasta",
              "France",
            ],
          },
          "selected": false,
          "y": 600,
        },
        {
          "y": null,
        },
        {
          "custom": {
            "rawValue": "1000",
            "xValue": [
              "Pies",
              "USA",
            ],
          },
          "selected": false,
          "y": 1000,
        },
        {
          "custom": {
            "rawValue": "200",
            "xValue": [
              "Pies",
              "France",
            ],
          },
          "selected": false,
          "y": 200,
        },
        {
          "y": null,
        },
        {
          "custom": {
            "rawValue": "100",
            "xValue": [
              "Wine",
              "USA",
            ],
          },
          "selected": false,
          "y": 100,
        },
        {
          "custom": {
            "rawValue": "400",
            "xValue": [
              "Wine",
              "France",
            ],
          },
          "selected": false,
          "y": 400,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "Revenue",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 0,
    },
    {
      "boostThreshold": 0,
      "color": "#9b9bd7",
      "connectNulls": false,
      "data": [
        {
          "custom": {
            "rawValue": "400",
            "xValue": [
              "Pasta",
              "USA",
            ],
          },
          "selected": false,
          "y": 400,
        },
        {
          "custom": {
            "rawValue": "270",
            "xValue": [
              "Pasta",
              "France",
            ],
          },
          "selected": false,
          "y": 270,
        },
        {
          "y": null,
        },
        {
          "custom": {
            "rawValue": "40",
            "xValue": [
              "Pies",
              "USA",
            ],
          },
          "selected": false,
          "y": 40,
        },
        {
          "custom": {
            "rawValue": "180",
            "xValue": [
              "Pies",
              "France",
            ],
          },
          "selected": false,
          "y": 180,
        },
        {
          "y": null,
        },
        {
          "custom": {
            "rawValue": "35",
            "xValue": [
              "Wine",
              "USA",
            ],
          },
          "selected": false,
          "y": 35,
        },
        {
          "custom": {
            "rawValue": "350",
            "xValue": [
              "Wine",
              "France",
            ],
          },
          "selected": false,
          "y": 350,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "Expenses",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 1,
    },
  ],
  "title": {
    "text": null,
  },
  "tooltip": {
    "animation": false,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#CCCCCC",
    "borderRadius": 10,
    "borderWidth": 1,
    "formatter": [Function],
    "useHTML": true,
  },
  "xAxis": [
    {
      "categories": [
        "USA",
        "France",
        " ",
        "USA",
        "France",
        " ",
        "USA",
        "France",
      ],
      "endOnTick": false,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "overflow": "none",
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": null,
      "min": null,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "plotBands": [
        {
          "from": -0.5,
          "isPlotBand": true,
          "label": {
            "style": {
              "color": "#5b6372",
              "fontFamily": "Open Sans",
              "fontSize": "13px",
              "fontWeight": "normal",
              "pointerEvents": "none",
              "textOutline": "none",
              "textOverflow": "ellipsis",
              "width": "70px",
            },
            "text": "Pasta",
            "y": -5,
          },
          "to": 2,
        },
        {
          "from": 2,
          "isPlotBand": true,
          "label": {
            "style": {
              "color": "#5b6372",
              "fontFamily": "Open Sans",
              "fontSize": "13px",
              "fontWeight": "normal",
              "pointerEvents": "none",
              "textOutline": "none",
              "textOverflow": "ellipsis",
              "width": "70px",
            },
            "text": "Pies",
            "y": -5,
          },
          "to": 5,
        },
        {
          "from": 5,
          "isPlotBand": true,
          "label": {
            "style": {
              "color": "#5b6372",
              "fontFamily": "Open Sans",
              "fontSize": "13px",
              "fontWeight": "normal",
              "pointerEvents": "none",
              "textOutline": "none",
              "textOverflow": "ellipsis",
              "width": "70px",
            },
            "text": "Wine",
            "y": -5,
          },
          "to": 7.5,
        },
      ],
      "plotLines": [
        {
          "color": "#C0D0E0",
          "dashStyle": "shortDot",
          "value": 2,
          "width": 1,
        },
        {
          "color": "#C0D0E0",
          "dashStyle": "shortDot",
          "value": 5,
          "width": 1,
        },
      ],
      "startOnTick": false,
      "tickColor": "#d1d1d7",
      "tickInterval": null,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "X Axis title",
      },
      "type": "linear",
    },
  ],
  "yAxis": [
    {
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 1200,
      "min": 100,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineDashStyle": "Dot",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "minorTickWidth": 0,
      "showLastLabel": true,
      "stackLabels": {
        "allowOverlap": false,
        "crop": true,
        "enabled": false,
        "labelrank": 99999,
        "rotation": 0,
        "style": {
          "color": "#56535b",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "bold",
          "pointerEvents": "none",
          "textOutline": "none",
          "textOverflow": "ellipsis",
        },
      },
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickInterval": null,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "Y Axis title",
      },
      "type": "linear",
    },
  ],
}
`;

exports[`renders a time series chart with break by 1`] = `
{
  "boost": {
    "useGPUTranslations": true,
    "usePreAllocated": true,
  },
  "chart": {
    "alignTicks": false,
    "polar": false,
    "spacing": [
      20,
      20,
      20,
      20,
    ],
    "type": "line",
  },
  "credits": {
    "enabled": false,
  },
  "exporting": {
    "enabled": true,
  },
  "legend": {
    "align": "center",
    "backgroundColor": "transparent",
    "borderColor": "transparent",
    "borderWidth": "",
    "enabled": true,
    "itemStyle": {
      "color": "#5b6372",
      "cursor": "default",
      "fontFamily": "Open Sans",
      "fontSize": "13px",
      "fontWeight": "normal",
      "pointerEvents": "none",
      "textOutline": "none",
    },
    "layout": "horizontal",
    "symbolRadius": 0,
    "verticalAlign": "bottom",
  },
  "navigator": {
    "enabled": false,
  },
  "plotOptions": {
    "series": {
      "connectNulls": false,
      "dataLabels": {
        "crop": false,
        "enabled": false,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineWidth": 2,
      "marker": {
        "enabled": false,
        "fillColor": null,
        "fillOpacity": 0.3,
        "lineColor": null,
        "lineWidth": 2,
        "radius": 4,
        "states": {
          "hover": {
            "fillColor": "#FFFFFF",
            "lineWidth": 3,
            "radius": 6,
          },
        },
        "symbol": "circle",
      },
      "states": {
        "select": {
          "borderColor": "transparent",
          "color": null,
          "opacity": 0.3,
        },
      },
      "stickyTracking": false,
    },
  },
  "series": [
    {
      "boostThreshold": 0,
      "color": "#00cee6",
      "connectNulls": false,
      "custom": {
        "rawValue": [
          "A",
        ],
      },
      "data": [
        {
          "custom": {
            "rawValue": 6781,
            "xDisplayValue": [
              "2020-01",
            ],
            "xValue": [
              "2020-01-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1577836800000,
          "y": 6781,
        },
        {
          "custom": {
            "rawValue": 4471,
            "xDisplayValue": [
              "2020-02",
            ],
            "xValue": [
              "2020-02-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1580515200000,
          "y": 4471,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-03",
            ],
            "xValue": [
              "2020-03-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1583020800000,
          "y": NaN,
        },
        {
          "custom": {
            "xDisplayValue": "2020-04",
          },
          "x": 1585785600000,
          "y": null,
        },
        {
          "custom": {
            "xDisplayValue": "2020-05",
          },
          "x": 1588377600000,
          "y": null,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-06",
            ],
            "xValue": [
              "2020-06-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1590969600000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": 2045,
            "xDisplayValue": [
              "2020-07",
            ],
            "xValue": [
              "2020-07-01T00:00:00.000Z",
            ],
          },
          "marker": {
            "enabled": true,
            "isIsolatedPoint": true,
          },
          "selected": false,
          "x": 1593561600000,
          "y": 2045,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-08",
            ],
            "xValue": [
              "2020-08-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1596240000000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": 5447,
            "xDisplayValue": [
              "2020-09",
            ],
            "xValue": [
              "2020-09-01T00:00:00.000Z",
            ],
          },
          "marker": {
            "enabled": true,
            "isIsolatedPoint": true,
          },
          "selected": false,
          "x": 1598918400000,
          "y": 5447,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-10",
            ],
            "xValue": [
              "2020-10-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1601510400000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-11",
            ],
            "xValue": [
              "2020-11-01T00:00:00.000Z",
            ],
          },
          "marker": {
            "enabled": true,
            "isIsolatedPoint": true,
          },
          "selected": false,
          "x": 1604188800000,
          "y": NaN,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "A",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 0,
    },
    {
      "boostThreshold": 0,
      "color": "#9b9bd7",
      "connectNulls": false,
      "custom": {
        "rawValue": [
          "B",
        ],
      },
      "data": [
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-01",
            ],
            "xValue": [
              "2020-01-01T00:00:00.000Z",
            ],
          },
          "marker": {
            "enabled": true,
            "isIsolatedPoint": true,
          },
          "selected": false,
          "x": 1577836800000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-02",
            ],
            "xValue": [
              "2020-02-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1580515200000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": 1812,
            "xDisplayValue": [
              "2020-03",
            ],
            "xValue": [
              "2020-03-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1583020800000,
          "y": 1812,
        },
        {
          "custom": {
            "xDisplayValue": "2020-04",
          },
          "x": 1585785600000,
          "y": null,
        },
        {
          "custom": {
            "xDisplayValue": "2020-05",
          },
          "x": 1588377600000,
          "y": null,
        },
        {
          "custom": {
            "rawValue": 5001,
            "xDisplayValue": [
              "2020-06",
            ],
            "xValue": [
              "2020-06-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1590969600000,
          "y": 5001,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-07",
            ],
            "xValue": [
              "2020-07-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1593561600000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": 3010,
            "xDisplayValue": [
              "2020-08",
            ],
            "xValue": [
              "2020-08-01T00:00:00.000Z",
            ],
          },
          "marker": {
            "enabled": true,
            "isIsolatedPoint": true,
          },
          "selected": false,
          "x": 1596240000000,
          "y": 3010,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-09",
            ],
            "xValue": [
              "2020-09-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1598918400000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": 4242,
            "xDisplayValue": [
              "2020-10",
            ],
            "xValue": [
              "2020-10-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1601510400000,
          "y": 4242,
        },
        {
          "custom": {
            "rawValue": 936,
            "xDisplayValue": [
              "2020-11",
            ],
            "xValue": [
              "2020-11-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1604188800000,
          "y": 936,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "B",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 0,
    },
  ],
  "title": {
    "text": null,
  },
  "tooltip": {
    "animation": false,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#CCCCCC",
    "borderRadius": 10,
    "borderWidth": 1,
    "formatter": [Function],
    "useHTML": true,
  },
  "xAxis": [
    {
      "dateTimeLabelFormats": {
        "day": "%A, %b %e, %Y",
        "hour": "%A, %b %e, %H:%M",
        "millisecond": "%A, %b %e, %H:%M:%S.%L",
        "minute": "%A, %b %e, %H:%M",
        "month": "%B %Y",
        "second": "%A, %b %e, %H:%M:%S",
        "week": "Week from %A, %b %e, %Y",
        "year": "%Y",
      },
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "isDate": true,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "overflow": "none",
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 1604188800000,
      "min": 1577836800000,
      "minRange": 2592000000,
      "minTickInterval": 2592000000,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "showFirstLabel": true,
      "showLastLabel": true,
      "startOfWeek": 4,
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickInterval": 2592000000,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "X Axis title",
      },
      "type": "datetime",
    },
  ],
  "yAxis": [
    {
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 6781,
      "min": 936,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineDashStyle": "Dot",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "minorTickWidth": 0,
      "showLastLabel": true,
      "stackLabels": {
        "allowOverlap": false,
        "crop": true,
        "enabled": false,
        "labelrank": 99999,
        "rotation": 0,
        "style": {
          "color": "#56535b",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "bold",
          "pointerEvents": "none",
          "textOutline": "none",
          "textOverflow": "ellipsis",
        },
      },
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickInterval": null,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "Y Axis title",
      },
      "type": "linear",
    },
  ],
}
`;

exports[`renders a time series chart with break by with connectNulls true 1`] = `
{
  "boost": {
    "useGPUTranslations": true,
    "usePreAllocated": true,
  },
  "chart": {
    "alignTicks": false,
    "polar": false,
    "spacing": [
      20,
      20,
      20,
      20,
    ],
    "type": "line",
  },
  "credits": {
    "enabled": false,
  },
  "exporting": {
    "enabled": true,
  },
  "legend": {
    "align": "center",
    "backgroundColor": "transparent",
    "borderColor": "transparent",
    "borderWidth": "",
    "enabled": true,
    "itemStyle": {
      "color": "#5b6372",
      "cursor": "default",
      "fontFamily": "Open Sans",
      "fontSize": "13px",
      "fontWeight": "normal",
      "pointerEvents": "none",
      "textOutline": "none",
    },
    "layout": "horizontal",
    "symbolRadius": 0,
    "verticalAlign": "bottom",
  },
  "navigator": {
    "enabled": false,
  },
  "plotOptions": {
    "series": {
      "connectNulls": false,
      "dataLabels": {
        "crop": false,
        "enabled": false,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineWidth": 2,
      "marker": {
        "enabled": false,
        "fillColor": null,
        "fillOpacity": 0.3,
        "lineColor": null,
        "lineWidth": 2,
        "radius": 4,
        "states": {
          "hover": {
            "fillColor": "#FFFFFF",
            "lineWidth": 3,
            "radius": 6,
          },
        },
        "symbol": "circle",
      },
      "states": {
        "select": {
          "borderColor": "transparent",
          "color": null,
          "opacity": 0.3,
        },
      },
      "stickyTracking": false,
    },
  },
  "series": [
    {
      "boostThreshold": 0,
      "color": "#00cee6",
      "connectNulls": true,
      "custom": {
        "rawValue": [
          "A",
        ],
      },
      "data": [
        {
          "custom": {
            "rawValue": 6781,
            "xDisplayValue": [
              "2020-01",
            ],
            "xValue": [
              "2020-01-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1577836800000,
          "y": 6781,
        },
        {
          "custom": {
            "rawValue": 4471,
            "xDisplayValue": [
              "2020-02",
            ],
            "xValue": [
              "2020-02-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1580515200000,
          "y": 4471,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-03",
            ],
            "xValue": [
              "2020-03-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1583020800000,
          "y": NaN,
        },
        {
          "custom": {
            "xDisplayValue": "2020-04",
          },
          "x": 1585785600000,
          "y": null,
        },
        {
          "custom": {
            "xDisplayValue": "2020-05",
          },
          "x": 1588377600000,
          "y": null,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-06",
            ],
            "xValue": [
              "2020-06-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1590969600000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": 2045,
            "xDisplayValue": [
              "2020-07",
            ],
            "xValue": [
              "2020-07-01T00:00:00.000Z",
            ],
          },
          "marker": {
            "enabled": true,
            "isIsolatedPoint": true,
          },
          "selected": false,
          "x": 1593561600000,
          "y": 2045,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-08",
            ],
            "xValue": [
              "2020-08-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1596240000000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": 5447,
            "xDisplayValue": [
              "2020-09",
            ],
            "xValue": [
              "2020-09-01T00:00:00.000Z",
            ],
          },
          "marker": {
            "enabled": true,
            "isIsolatedPoint": true,
          },
          "selected": false,
          "x": 1598918400000,
          "y": 5447,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-10",
            ],
            "xValue": [
              "2020-10-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1601510400000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-11",
            ],
            "xValue": [
              "2020-11-01T00:00:00.000Z",
            ],
          },
          "marker": {
            "enabled": true,
            "isIsolatedPoint": true,
          },
          "selected": false,
          "x": 1604188800000,
          "y": NaN,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "A",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 0,
    },
    {
      "boostThreshold": 0,
      "color": "#9b9bd7",
      "connectNulls": true,
      "custom": {
        "rawValue": [
          "B",
        ],
      },
      "data": [
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-01",
            ],
            "xValue": [
              "2020-01-01T00:00:00.000Z",
            ],
          },
          "marker": {
            "enabled": true,
            "isIsolatedPoint": true,
          },
          "selected": false,
          "x": 1577836800000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-02",
            ],
            "xValue": [
              "2020-02-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1580515200000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": 1812,
            "xDisplayValue": [
              "2020-03",
            ],
            "xValue": [
              "2020-03-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1583020800000,
          "y": 1812,
        },
        {
          "custom": {
            "xDisplayValue": "2020-04",
          },
          "x": 1585785600000,
          "y": null,
        },
        {
          "custom": {
            "xDisplayValue": "2020-05",
          },
          "x": 1588377600000,
          "y": null,
        },
        {
          "custom": {
            "rawValue": 5001,
            "xDisplayValue": [
              "2020-06",
            ],
            "xValue": [
              "2020-06-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1590969600000,
          "y": 5001,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-07",
            ],
            "xValue": [
              "2020-07-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1593561600000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": 3010,
            "xDisplayValue": [
              "2020-08",
            ],
            "xValue": [
              "2020-08-01T00:00:00.000Z",
            ],
          },
          "marker": {
            "enabled": true,
            "isIsolatedPoint": true,
          },
          "selected": false,
          "x": 1596240000000,
          "y": 3010,
        },
        {
          "custom": {
            "rawValue": undefined,
            "xDisplayValue": [
              "2020-09",
            ],
            "xValue": [
              "2020-09-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1598918400000,
          "y": NaN,
        },
        {
          "custom": {
            "rawValue": 4242,
            "xDisplayValue": [
              "2020-10",
            ],
            "xValue": [
              "2020-10-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1601510400000,
          "y": 4242,
        },
        {
          "custom": {
            "rawValue": 936,
            "xDisplayValue": [
              "2020-11",
            ],
            "xValue": [
              "2020-11-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1604188800000,
          "y": 936,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "B",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 0,
    },
  ],
  "title": {
    "text": null,
  },
  "tooltip": {
    "animation": false,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#CCCCCC",
    "borderRadius": 10,
    "borderWidth": 1,
    "formatter": [Function],
    "useHTML": true,
  },
  "xAxis": [
    {
      "dateTimeLabelFormats": {
        "day": "%A, %b %e, %Y",
        "hour": "%A, %b %e, %H:%M",
        "millisecond": "%A, %b %e, %H:%M:%S.%L",
        "minute": "%A, %b %e, %H:%M",
        "month": "%B %Y",
        "second": "%A, %b %e, %H:%M:%S",
        "week": "Week from %A, %b %e, %Y",
        "year": "%Y",
      },
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "isDate": true,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "overflow": "none",
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 1604188800000,
      "min": 1577836800000,
      "minRange": 2592000000,
      "minTickInterval": 2592000000,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "showFirstLabel": true,
      "showLastLabel": true,
      "startOfWeek": 4,
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickInterval": 2592000000,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "X Axis title",
      },
      "type": "datetime",
    },
  ],
  "yAxis": [
    {
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 6781,
      "min": 936,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineDashStyle": "Dot",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "minorTickWidth": 0,
      "showLastLabel": true,
      "stackLabels": {
        "allowOverlap": false,
        "crop": true,
        "enabled": false,
        "labelrank": 99999,
        "rotation": 0,
        "style": {
          "color": "#56535b",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "bold",
          "pointerEvents": "none",
          "textOutline": "none",
          "textOverflow": "ellipsis",
        },
      },
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickInterval": null,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "Y Axis title",
      },
      "type": "linear",
    },
  ],
}
`;

exports[`renders a time series with connectNulls true on one measure 1`] = `
{
  "boost": {
    "useGPUTranslations": true,
    "usePreAllocated": true,
  },
  "chart": {
    "alignTicks": false,
    "polar": false,
    "spacing": [
      20,
      20,
      20,
      20,
    ],
    "type": "line",
  },
  "credits": {
    "enabled": false,
  },
  "exporting": {
    "enabled": true,
  },
  "legend": {
    "align": "center",
    "backgroundColor": "transparent",
    "borderColor": "transparent",
    "borderWidth": "",
    "enabled": true,
    "itemStyle": {
      "color": "#5b6372",
      "cursor": "default",
      "fontFamily": "Open Sans",
      "fontSize": "13px",
      "fontWeight": "normal",
      "pointerEvents": "none",
      "textOutline": "none",
    },
    "layout": "horizontal",
    "symbolRadius": 0,
    "verticalAlign": "bottom",
  },
  "navigator": {
    "enabled": false,
  },
  "plotOptions": {
    "series": {
      "connectNulls": false,
      "dataLabels": {
        "crop": false,
        "enabled": false,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineWidth": 2,
      "marker": {
        "enabled": false,
        "fillColor": null,
        "fillOpacity": 0.3,
        "lineColor": null,
        "lineWidth": 2,
        "radius": 4,
        "states": {
          "hover": {
            "fillColor": "#FFFFFF",
            "lineWidth": 3,
            "radius": 6,
          },
        },
        "symbol": "circle",
      },
      "states": {
        "select": {
          "borderColor": "transparent",
          "color": null,
          "opacity": 0.3,
        },
      },
      "stickyTracking": false,
    },
  },
  "series": [
    {
      "boostThreshold": 0,
      "color": "#00cee6",
      "connectNulls": true,
      "data": [
        {
          "custom": {
            "rawValue": 6781,
            "xDisplayValue": [
              "2020-01",
            ],
            "xValue": [
              "2020-01-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1577836800000,
          "y": 6781,
        },
        {
          "custom": {
            "rawValue": 4471,
            "xDisplayValue": [
              "2020-02",
            ],
            "xValue": [
              "2020-02-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1580515200000,
          "y": 4471,
        },
        {
          "custom": {
            "rawValue": 1812,
            "xDisplayValue": [
              "2020-03",
            ],
            "xValue": [
              "2020-03-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1583020800000,
          "y": 1812,
        },
        {
          "custom": {
            "xDisplayValue": "2020-04",
          },
          "x": 1585785600000,
          "y": null,
        },
        {
          "custom": {
            "xDisplayValue": "2020-05",
          },
          "x": 1588377600000,
          "y": null,
        },
        {
          "custom": {
            "rawValue": 5001,
            "xDisplayValue": [
              "2020-06",
            ],
            "xValue": [
              "2020-06-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1590969600000,
          "y": 5001,
        },
        {
          "custom": {
            "rawValue": 2045,
            "xDisplayValue": [
              "2020-07",
            ],
            "xValue": [
              "2020-07-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1593561600000,
          "y": 2045,
        },
        {
          "custom": {
            "rawValue": 3010,
            "xDisplayValue": [
              "2020-08",
            ],
            "xValue": [
              "2020-08-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1596240000000,
          "y": 3010,
        },
        {
          "custom": {
            "rawValue": 5447,
            "xDisplayValue": [
              "2020-09",
            ],
            "xValue": [
              "2020-09-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1598918400000,
          "y": 5447,
        },
        {
          "custom": {
            "rawValue": 4242,
            "xDisplayValue": [
              "2020-10",
            ],
            "xValue": [
              "2020-10-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1601510400000,
          "y": 4242,
        },
        {
          "custom": {
            "rawValue": 936,
            "xDisplayValue": [
              "2020-11",
            ],
            "xValue": [
              "2020-11-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1604188800000,
          "y": 936,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "Quantity",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 0,
    },
    {
      "boostThreshold": 0,
      "color": "#9b9bd7",
      "connectNulls": false,
      "data": [
        {
          "custom": {
            "rawValue": 10,
            "xDisplayValue": [
              "2020-01",
            ],
            "xValue": [
              "2020-01-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1577836800000,
          "y": 10,
        },
        {
          "custom": {
            "rawValue": 70,
            "xDisplayValue": [
              "2020-02",
            ],
            "xValue": [
              "2020-02-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1580515200000,
          "y": 70,
        },
        {
          "custom": {
            "rawValue": 50,
            "xDisplayValue": [
              "2020-03",
            ],
            "xValue": [
              "2020-03-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1583020800000,
          "y": 50,
        },
        {
          "custom": {
            "xDisplayValue": "2020-04",
          },
          "x": 1585785600000,
          "y": null,
        },
        {
          "custom": {
            "xDisplayValue": "2020-05",
          },
          "x": 1588377600000,
          "y": null,
        },
        {
          "custom": {
            "rawValue": 60,
            "xDisplayValue": [
              "2020-06",
            ],
            "xValue": [
              "2020-06-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1590969600000,
          "y": 60,
        },
        {
          "custom": {
            "rawValue": 40,
            "xDisplayValue": [
              "2020-07",
            ],
            "xValue": [
              "2020-07-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1593561600000,
          "y": 40,
        },
        {
          "custom": {
            "rawValue": 90,
            "xDisplayValue": [
              "2020-08",
            ],
            "xValue": [
              "2020-08-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1596240000000,
          "y": 90,
        },
        {
          "custom": {
            "rawValue": 80,
            "xDisplayValue": [
              "2020-09",
            ],
            "xValue": [
              "2020-09-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1598918400000,
          "y": 80,
        },
        {
          "custom": {
            "rawValue": 70,
            "xDisplayValue": [
              "2020-10",
            ],
            "xValue": [
              "2020-10-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1601510400000,
          "y": 70,
        },
        {
          "custom": {
            "rawValue": 20,
            "xDisplayValue": [
              "2020-11",
            ],
            "xValue": [
              "2020-11-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1604188800000,
          "y": 20,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "Units",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 0,
    },
  ],
  "title": {
    "text": null,
  },
  "tooltip": {
    "animation": false,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#CCCCCC",
    "borderRadius": 10,
    "borderWidth": 1,
    "formatter": [Function],
    "useHTML": true,
  },
  "xAxis": [
    {
      "dateTimeLabelFormats": {
        "day": "%A, %b %e, %Y",
        "hour": "%A, %b %e, %H:%M",
        "millisecond": "%A, %b %e, %H:%M:%S.%L",
        "minute": "%A, %b %e, %H:%M",
        "month": "%B %Y",
        "second": "%A, %b %e, %H:%M:%S",
        "week": "Week from %A, %b %e, %Y",
        "year": "%Y",
      },
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "isDate": true,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "overflow": "none",
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 1604188800000,
      "min": 1577836800000,
      "minRange": 2592000000,
      "minTickInterval": 2592000000,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "showFirstLabel": true,
      "showLastLabel": true,
      "startOfWeek": 4,
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickInterval": 2592000000,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "X Axis title",
      },
      "type": "datetime",
    },
  ],
  "yAxis": [
    {
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 6781,
      "min": 10,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineDashStyle": "Dot",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "minorTickWidth": 0,
      "showLastLabel": true,
      "stackLabels": {
        "allowOverlap": false,
        "crop": true,
        "enabled": false,
        "labelrank": 99999,
        "rotation": 0,
        "style": {
          "color": "#56535b",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "bold",
          "pointerEvents": "none",
          "textOutline": "none",
          "textOverflow": "ellipsis",
        },
      },
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickInterval": null,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "Y Axis title",
      },
      "type": "linear",
    },
  ],
}
`;

exports[`renders a time series with granularity Month 1`] = `
{
  "boost": {
    "useGPUTranslations": true,
    "usePreAllocated": true,
  },
  "chart": {
    "alignTicks": false,
    "polar": false,
    "spacing": [
      20,
      20,
      20,
      20,
    ],
    "type": "line",
  },
  "credits": {
    "enabled": false,
  },
  "exporting": {
    "enabled": true,
  },
  "legend": {
    "align": "center",
    "backgroundColor": "transparent",
    "borderColor": "transparent",
    "borderWidth": "",
    "enabled": true,
    "itemStyle": {
      "color": "#5b6372",
      "cursor": "default",
      "fontFamily": "Open Sans",
      "fontSize": "13px",
      "fontWeight": "normal",
      "pointerEvents": "none",
      "textOutline": "none",
    },
    "layout": "horizontal",
    "symbolRadius": 0,
    "verticalAlign": "bottom",
  },
  "navigator": {
    "enabled": false,
  },
  "plotOptions": {
    "series": {
      "connectNulls": false,
      "dataLabels": {
        "crop": false,
        "enabled": false,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineWidth": 2,
      "marker": {
        "enabled": false,
        "fillColor": null,
        "fillOpacity": 0.3,
        "lineColor": null,
        "lineWidth": 2,
        "radius": 4,
        "states": {
          "hover": {
            "fillColor": "#FFFFFF",
            "lineWidth": 3,
            "radius": 6,
          },
        },
        "symbol": "circle",
      },
      "states": {
        "select": {
          "borderColor": "transparent",
          "color": null,
          "opacity": 0.3,
        },
      },
      "stickyTracking": false,
    },
  },
  "series": [
    {
      "boostThreshold": 0,
      "color": "#00cee6",
      "connectNulls": false,
      "data": [
        {
          "custom": {
            "rawValue": 6781,
            "xDisplayValue": [
              "2020-01",
            ],
            "xValue": [
              "2020-01-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1577836800000,
          "y": 6781,
        },
        {
          "custom": {
            "rawValue": 4471,
            "xDisplayValue": [
              "2020-02",
            ],
            "xValue": [
              "2020-02-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1580515200000,
          "y": 4471,
        },
        {
          "custom": {
            "rawValue": 1812,
            "xDisplayValue": [
              "2020-03",
            ],
            "xValue": [
              "2020-03-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1583020800000,
          "y": 1812,
        },
        {
          "custom": {
            "xDisplayValue": "2020-04",
          },
          "x": 1585785600000,
          "y": null,
        },
        {
          "custom": {
            "xDisplayValue": "2020-05",
          },
          "x": 1588377600000,
          "y": null,
        },
        {
          "custom": {
            "rawValue": 5001,
            "xDisplayValue": [
              "2020-06",
            ],
            "xValue": [
              "2020-06-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1590969600000,
          "y": 5001,
        },
        {
          "custom": {
            "rawValue": 2045,
            "xDisplayValue": [
              "2020-07",
            ],
            "xValue": [
              "2020-07-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1593561600000,
          "y": 2045,
        },
        {
          "custom": {
            "rawValue": 3010,
            "xDisplayValue": [
              "2020-08",
            ],
            "xValue": [
              "2020-08-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1596240000000,
          "y": 3010,
        },
        {
          "custom": {
            "rawValue": 5447,
            "xDisplayValue": [
              "2020-09",
            ],
            "xValue": [
              "2020-09-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1598918400000,
          "y": 5447,
        },
        {
          "custom": {
            "rawValue": 4242,
            "xDisplayValue": [
              "2020-10",
            ],
            "xValue": [
              "2020-10-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1601510400000,
          "y": 4242,
        },
        {
          "custom": {
            "rawValue": 936,
            "xDisplayValue": [
              "2020-11",
            ],
            "xValue": [
              "2020-11-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1604188800000,
          "y": 936,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "Quantity",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 0,
    },
    {
      "boostThreshold": 0,
      "color": "#9b9bd7",
      "connectNulls": false,
      "data": [
        {
          "custom": {
            "rawValue": 10,
            "xDisplayValue": [
              "2020-01",
            ],
            "xValue": [
              "2020-01-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1577836800000,
          "y": 10,
        },
        {
          "custom": {
            "rawValue": 70,
            "xDisplayValue": [
              "2020-02",
            ],
            "xValue": [
              "2020-02-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1580515200000,
          "y": 70,
        },
        {
          "custom": {
            "rawValue": 50,
            "xDisplayValue": [
              "2020-03",
            ],
            "xValue": [
              "2020-03-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1583020800000,
          "y": 50,
        },
        {
          "custom": {
            "xDisplayValue": "2020-04",
          },
          "x": 1585785600000,
          "y": null,
        },
        {
          "custom": {
            "xDisplayValue": "2020-05",
          },
          "x": 1588377600000,
          "y": null,
        },
        {
          "custom": {
            "rawValue": 60,
            "xDisplayValue": [
              "2020-06",
            ],
            "xValue": [
              "2020-06-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1590969600000,
          "y": 60,
        },
        {
          "custom": {
            "rawValue": 40,
            "xDisplayValue": [
              "2020-07",
            ],
            "xValue": [
              "2020-07-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1593561600000,
          "y": 40,
        },
        {
          "custom": {
            "rawValue": 90,
            "xDisplayValue": [
              "2020-08",
            ],
            "xValue": [
              "2020-08-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1596240000000,
          "y": 90,
        },
        {
          "custom": {
            "rawValue": 80,
            "xDisplayValue": [
              "2020-09",
            ],
            "xValue": [
              "2020-09-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1598918400000,
          "y": 80,
        },
        {
          "custom": {
            "rawValue": 70,
            "xDisplayValue": [
              "2020-10",
            ],
            "xValue": [
              "2020-10-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1601510400000,
          "y": 70,
        },
        {
          "custom": {
            "rawValue": 20,
            "xDisplayValue": [
              "2020-11",
            ],
            "xValue": [
              "2020-11-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1604188800000,
          "y": 20,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "Units",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 0,
    },
  ],
  "title": {
    "text": null,
  },
  "tooltip": {
    "animation": false,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#CCCCCC",
    "borderRadius": 10,
    "borderWidth": 1,
    "formatter": [Function],
    "useHTML": true,
  },
  "xAxis": [
    {
      "dateTimeLabelFormats": {
        "day": "%A, %b %e, %Y",
        "hour": "%A, %b %e, %H:%M",
        "millisecond": "%A, %b %e, %H:%M:%S.%L",
        "minute": "%A, %b %e, %H:%M",
        "month": "%B %Y",
        "second": "%A, %b %e, %H:%M:%S",
        "week": "Week from %A, %b %e, %Y",
        "year": "%Y",
      },
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "isDate": true,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "overflow": "none",
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 1604188800000,
      "min": 1577836800000,
      "minRange": 2592000000,
      "minTickInterval": 2592000000,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "showFirstLabel": true,
      "showLastLabel": true,
      "startOfWeek": 4,
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickInterval": 2592000000,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "X Axis title",
      },
      "type": "datetime",
    },
  ],
  "yAxis": [
    {
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 6781,
      "min": 10,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineDashStyle": "Dot",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "minorTickWidth": 0,
      "showLastLabel": true,
      "stackLabels": {
        "allowOverlap": false,
        "crop": true,
        "enabled": false,
        "labelrank": 99999,
        "rotation": 0,
        "style": {
          "color": "#56535b",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "bold",
          "pointerEvents": "none",
          "textOutline": "none",
          "textOverflow": "ellipsis",
        },
      },
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickInterval": null,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "Y Axis title",
      },
      "type": "linear",
    },
  ],
}
`;

exports[`renders a time series with multiple measures and no break by 1`] = `
{
  "boost": {
    "useGPUTranslations": true,
    "usePreAllocated": true,
  },
  "chart": {
    "alignTicks": false,
    "polar": false,
    "spacing": [
      20,
      20,
      20,
      20,
    ],
    "type": "line",
  },
  "credits": {
    "enabled": false,
  },
  "exporting": {
    "enabled": true,
  },
  "legend": {
    "align": "center",
    "backgroundColor": "transparent",
    "borderColor": "transparent",
    "borderWidth": "",
    "enabled": true,
    "itemStyle": {
      "color": "#5b6372",
      "cursor": "default",
      "fontFamily": "Open Sans",
      "fontSize": "13px",
      "fontWeight": "normal",
      "pointerEvents": "none",
      "textOutline": "none",
    },
    "layout": "horizontal",
    "symbolRadius": 0,
    "verticalAlign": "bottom",
  },
  "navigator": {
    "enabled": false,
  },
  "plotOptions": {
    "series": {
      "connectNulls": false,
      "dataLabels": {
        "crop": false,
        "enabled": false,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineWidth": 2,
      "marker": {
        "enabled": false,
        "fillColor": null,
        "fillOpacity": 0.3,
        "lineColor": null,
        "lineWidth": 2,
        "radius": 4,
        "states": {
          "hover": {
            "fillColor": "#FFFFFF",
            "lineWidth": 3,
            "radius": 6,
          },
        },
        "symbol": "circle",
      },
      "states": {
        "select": {
          "borderColor": "transparent",
          "color": null,
          "opacity": 0.3,
        },
      },
      "stickyTracking": false,
    },
  },
  "series": [
    {
      "boostThreshold": 0,
      "color": "#00cee6",
      "connectNulls": false,
      "data": [
        {
          "custom": {
            "rawValue": 6781,
            "xDisplayValue": [
              "2020-01",
            ],
            "xValue": [
              "2020-01-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1577836800000,
          "y": 6781,
        },
        {
          "custom": {
            "rawValue": 4471,
            "xDisplayValue": [
              "2020-02",
            ],
            "xValue": [
              "2020-02-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1580515200000,
          "y": 4471,
        },
        {
          "custom": {
            "rawValue": 1812,
            "xDisplayValue": [
              "2020-03",
            ],
            "xValue": [
              "2020-03-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1583020800000,
          "y": 1812,
        },
        {
          "custom": {
            "xDisplayValue": "2020-04",
          },
          "x": 1585785600000,
          "y": null,
        },
        {
          "custom": {
            "xDisplayValue": "2020-05",
          },
          "x": 1588377600000,
          "y": null,
        },
        {
          "custom": {
            "rawValue": 5001,
            "xDisplayValue": [
              "2020-06",
            ],
            "xValue": [
              "2020-06-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1590969600000,
          "y": 5001,
        },
        {
          "custom": {
            "rawValue": 2045,
            "xDisplayValue": [
              "2020-07",
            ],
            "xValue": [
              "2020-07-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1593561600000,
          "y": 2045,
        },
        {
          "custom": {
            "rawValue": 3010,
            "xDisplayValue": [
              "2020-08",
            ],
            "xValue": [
              "2020-08-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1596240000000,
          "y": 3010,
        },
        {
          "custom": {
            "rawValue": 5447,
            "xDisplayValue": [
              "2020-09",
            ],
            "xValue": [
              "2020-09-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1598918400000,
          "y": 5447,
        },
        {
          "custom": {
            "rawValue": 4242,
            "xDisplayValue": [
              "2020-10",
            ],
            "xValue": [
              "2020-10-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1601510400000,
          "y": 4242,
        },
        {
          "custom": {
            "rawValue": 936,
            "xDisplayValue": [
              "2020-11",
            ],
            "xValue": [
              "2020-11-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1604188800000,
          "y": 936,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "Quantity",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 0,
    },
    {
      "boostThreshold": 0,
      "color": "#9b9bd7",
      "connectNulls": false,
      "data": [
        {
          "custom": {
            "rawValue": 10,
            "xDisplayValue": [
              "2020-01",
            ],
            "xValue": [
              "2020-01-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1577836800000,
          "y": 10,
        },
        {
          "custom": {
            "rawValue": 70,
            "xDisplayValue": [
              "2020-02",
            ],
            "xValue": [
              "2020-02-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1580515200000,
          "y": 70,
        },
        {
          "custom": {
            "rawValue": 50,
            "xDisplayValue": [
              "2020-03",
            ],
            "xValue": [
              "2020-03-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1583020800000,
          "y": 50,
        },
        {
          "custom": {
            "xDisplayValue": "2020-04",
          },
          "x": 1585785600000,
          "y": null,
        },
        {
          "custom": {
            "xDisplayValue": "2020-05",
          },
          "x": 1588377600000,
          "y": null,
        },
        {
          "custom": {
            "rawValue": 60,
            "xDisplayValue": [
              "2020-06",
            ],
            "xValue": [
              "2020-06-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1590969600000,
          "y": 60,
        },
        {
          "custom": {
            "rawValue": 40,
            "xDisplayValue": [
              "2020-07",
            ],
            "xValue": [
              "2020-07-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1593561600000,
          "y": 40,
        },
        {
          "custom": {
            "rawValue": 90,
            "xDisplayValue": [
              "2020-08",
            ],
            "xValue": [
              "2020-08-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1596240000000,
          "y": 90,
        },
        {
          "custom": {
            "rawValue": 80,
            "xDisplayValue": [
              "2020-09",
            ],
            "xValue": [
              "2020-09-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1598918400000,
          "y": 80,
        },
        {
          "custom": {
            "rawValue": 70,
            "xDisplayValue": [
              "2020-10",
            ],
            "xValue": [
              "2020-10-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1601510400000,
          "y": 70,
        },
        {
          "custom": {
            "rawValue": 20,
            "xDisplayValue": [
              "2020-11",
            ],
            "xValue": [
              "2020-11-01T00:00:00.000Z",
            ],
          },
          "selected": false,
          "x": 1604188800000,
          "y": 20,
        },
      ],
      "dataLabels": {
        "formatter": [Function],
      },
      "name": "Units",
      "showInNavigator": true,
      "stickyTracking": false,
      "turboThreshold": 0,
      "yAxis": 0,
    },
  ],
  "title": {
    "text": null,
  },
  "tooltip": {
    "animation": false,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#CCCCCC",
    "borderRadius": 10,
    "borderWidth": 1,
    "formatter": [Function],
    "useHTML": true,
  },
  "xAxis": [
    {
      "dateTimeLabelFormats": {
        "day": "%A, %b %e, %Y",
        "hour": "%A, %b %e, %H:%M",
        "millisecond": "%A, %b %e, %H:%M:%S.%L",
        "minute": "%A, %b %e, %H:%M",
        "month": "%B %Y",
        "second": "%A, %b %e, %H:%M:%S",
        "week": "Week from %A, %b %e, %Y",
        "year": "%Y",
      },
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "isDate": true,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "overflow": "none",
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 1604188800000,
      "min": 1577836800000,
      "minRange": 2592000000,
      "minTickInterval": 2592000000,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "showFirstLabel": true,
      "showLastLabel": true,
      "startOfWeek": 4,
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickInterval": 2592000000,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "X Axis title",
      },
      "type": "datetime",
    },
  ],
  "yAxis": [
    {
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 6781,
      "min": 10,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineDashStyle": "Dot",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "minorTickWidth": 0,
      "showLastLabel": true,
      "stackLabels": {
        "allowOverlap": false,
        "crop": true,
        "enabled": false,
        "labelrank": 99999,
        "rotation": 0,
        "style": {
          "color": "#56535b",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "bold",
          "pointerEvents": "none",
          "textOutline": "none",
          "textOverflow": "ellipsis",
        },
      },
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickInterval": null,
      "tickWidth": 0,
      "tickmarkPlacement": "on",
      "title": {
        "enabled": true,
        "margin": 25,
        "style": {
          "color": "#5b6372",
          "fontFamily": "Open Sans",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": "Y Axis title",
      },
      "type": "linear",
    },
  ],
}
`;
